@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(run_shiny)
 import(dplyr)
 import(ggplot2)
 import(shiny)
