@@ -1,14 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/run-shiny.R
-\name{run_shiny}
-\alias{run_shiny}
-\title{run_shiny}
-\usage{
-run_shiny(debug = FALSE)
-}
-\arguments{
-\item{debug}{Not yet implemented.}
-}
-\description{
-run_shiny
-}
